add support for typed middlewares
