# examples/todo_list_app_example/openapi.yaml
@@ -30,6 +30,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/TasksPage"
+        401:
+          $ref: "#/components/responses/401"
 
     post:
       operationId: createNewTask
@@ -46,6 +48,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Identifiable"
+        401:
+          $ref: "#/components/responses/401"
   /tasks/{id}:
     get:
       operationId: getTaskByID
@@ -65,6 +69,8 @@ paths:
                 $ref: "#/components/schemas/Task"
         400:
           $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
         404:
           $ref: "#/components/responses/404"
     delete:
@@ -81,6 +87,8 @@ paths:
           description: Deleted successfully
         400:
           $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
         410:
           $ref: "#/components/responses/410"
     put:
@@ -102,6 +110,8 @@ paths:
           description: Updated successfully
         400:
           $ref: "#/components/responses/400"
+        401:
+          $ref: "#/components/responses/401"
         404:
           $ref: "#/components/responses/404"
 
@@ -164,6 +174,12 @@ components:
   responses:
     400:
       description: bad request
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/HttpError"
+    401:
+      description: unauthorized
       content:
         application/json:
           schema:
