# examples/todo_list_app_example/rest/get_tasks_by_id_handler.go
@@ -1,4 +1,4 @@
-package models
+package rest
 
 import (
 	"fmt"
@@ -8,31 +8,31 @@ import (
 	r "github.com/piiano/restcontroller/router"
 )
 
-func getTaskByIDOperation(tasks services.TasksService) r.OperationHandler {
-	return r.OperationFunc(func(request r.Request[r.Nil, idPathParam, r.Nil]) (int, getTaskByIDResponses) {
+func getTaskByIDOperation(tasks services.TasksService) r.Handler {
+	return r.NewOperationHandler(func(request r.Request[r.Nil, idPathParam, r.Nil]) (r.Response[getTaskByIDResponses], error) {
 		id, err := uuid.Parse(request.PathParams.ID)
 		if err != nil {
-			return 400, getTaskByIDResponses{
-				BadRequest: httpError{
+			return r.Send(400, getTaskByIDResponses{
+				BadRequest: m.HttpError{
 					Error:  "bad request",
 					Reason: err.Error(),
 				},
-			}
+			})
 		}
 		if task, found := tasks.GetTaskByID(id); found {
-			return 200, getTaskByIDResponses{OK: task}
+			return r.Send(200, getTaskByIDResponses{OK: task})
 		}
-		return 404, getTaskByIDResponses{
-			NotFound: httpError{
+		return r.Send(404, getTaskByIDResponses{
+			NotFound: m.HttpError{
 				Error:  "not found",
 				Reason: fmt.Sprintf("task with id %q is not found", request.PathParams.ID),
 			},
-		}
+		})
 	})
 }
 
 type getTaskByIDResponses struct {
-	OK         m.Task    `status:"200"`
-	BadRequest httpError `status:"400"`
-	NotFound   httpError `status:"404"`
+	OK         m.Task      `status:"200"`
+	BadRequest m.HttpError `status:"400"`
+	NotFound   m.HttpError `status:"404"`
 }
